--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="principalYellow">#FBB031</color>
     <color name="gray">#D9D9D9</color>
+
+
+    <color name="principalYellow">#FBB031</color>
+    <color name="secondYellow">#FDDB8A</color>
+    <color name="terceroYellow">#FFF9EB</color>
+    <color name="botoncolor">#804320</color>
 </resources>
