--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="secondYellow">#FDDB8A</color>
     <color name="terceroYellow">#FFF9EB</color>
     <color name="botoncolor">#804320</color>
+    <color name="botoncolor2">#e3b482</color>
 </resources>
